Gjør dokumenttype ID om til kun string